# playground-szkolawchmurze

./: .gitignore  README.md  manage.py  pyproject.toml
skrotowiec/: asgi.py  settings.py  urls.py  wsgi.py
skrotowiec/shrt/: apps.py  models.py  serializers.py  tests.py  views.py
skrotowiec/shrt/migrations/: 0001_initial.py
